--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@ body.solarized .theme-selector {
 <!--
       <li>GitHub: <a href="https://github.com/SantaTool">@SantaTool</a></li>
 -->
-      <li><span data-i18n="email-label">Email:</span> <a href="mailto:kaus130dbn@gmail.com">Santa Debnath</a></li>
+      <li><span data-i18n="email-label">Email:</span>&nbsp;&nbsp;<a href="mailto:kaus130dbn@gmail.com">Santa Debnath</a></li>
     </ul>
   </section>
 
