--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@ body.solarized .theme-selector {
 <!--
       <li>GitHub: <a href="https://github.com/SantaTool">@SantaTool</a></li>
 -->
-      <li><span data-i18n="email-label">Email:</span>&nbsp;&nbsp;<a href="mailto:kaus130dbn@gmail.com">Santa Debnath</a></li>
+      <li><span data-i18n="email-label">✉️ Email:</span>&nbsp;&nbsp;<a href="mailto:kaus130dbn@gmail.com">Santa Debnath</a></li>
     </ul>
   </section>
 
@@ -736,7 +736,7 @@ body.solarized .theme-selector {
       "theme-ocean": "🌊 Ocean Breeze",
       "theme-midnight": "🌌 Midnight Blue",
       "theme-nebula": "🌠 Nebula Dream",
-      "email-label": "Email:",
+      "email-label": "✉️ Email:",
       "nav-projects": "Projects",
       "nav-professional": "Professional Experience",
       "nav-stay-tuned": "Stay Tuned",
@@ -784,7 +784,7 @@ body.solarized .theme-selector {
       "theme-ocean": "🌊 सागर की हवा",
       "theme-midnight": "🌌 आधी रात का नीला",
       "theme-nebula": "🌠 नीहारिका सपना",
-      "email-label": "ईमेल:",
+      "email-label": "✉️ ईमेल:",
       "nav-projects": "परियोजनाएँ",
       "nav-professional": "पेशेवर अनुभव",
       "nav-stay-tuned": "बने रहें",
@@ -831,7 +831,7 @@ body.solarized .theme-selector {
       "theme-ocean": "🌊 মহাসাগরের বাতাস",
       "theme-midnight": "🌌 মধ্যরাতের নীল",
       "theme-nebula": "🌠 নীহারিকা স্বপ্ন",
-      "email-label": "ইমেইল:",
+      "email-label": "✉️ ইমেইল:",
       "nav-projects": "প্রজেক্টসমূহ",
       "nav-professional": "পেশাগত অভিজ্ঞতা",
       "nav-stay-tuned": "সামনে আসছে",
