--- a/index.html
+++ b/index.html
@@ -263,6 +263,12 @@ body.nebula {
       margin-top: 3rem;
     }
 
+    footer p {
+      font-size: 1rem;
+      line-height: 1.6;
+      letter-spacing: 0.5px;
+    }
+
     @media (max-width: 768px) {
       header {
         flex-direction: column;
@@ -672,7 +678,7 @@ body.solarized .theme-selector {
   </section>
 
   <footer>
-    <p data-i18n="footer-text">&copy; 2025 Santa Debnath | All rights reserved | Welcome to my World</p>
+    <p data-i18n="footer-text">&copy; 2025 Santa Debnath | 🔒 All Rights Reserved | 👋 Welcome to My World 🌟</p>
   </footer>
 
   <script>
