--- a/index.html
+++ b/index.html
@@ -269,6 +269,15 @@ body.nebula {
       letter-spacing: 0.5px;
     }
 
+    .glow {
+      font-weight: bold;
+      font-size: 1.5rem; /* Adjust as needed */
+      color: #00f0ff;
+      text-shadow: 0 0 5px #00f0ff, 0 0 10px #00f0ff, 0 0 20px #00e0ff;
+      margin-right: 6px;
+      vertical-align: middle;
+    }
+
     @media (max-width: 768px) {
       header {
         flex-direction: column;
@@ -678,7 +687,8 @@ body.solarized .theme-selector {
   </section>
 
   <footer>
-    <p data-i18n="footer-text">&copy; 2025 Santa Debnath | 🔒 All Rights Reserved | 👋 Welcome to My World 🌟</p>
+    <p><span class="glow">&copy;</span><span data-i18n="footer-text"></span></p>
+    <p data-i18n="footer-text"> 2025 Santa Debnath | 🔒 All Rights Reserved | 👋 Welcome to My World 🌟</p>
   </footer>
 
   <script>
@@ -735,7 +745,7 @@ body.solarized .theme-selector {
       "experience-point-1": "🛠️ An overview of how made my professional journey upto this point.",
       "experience-point-2": "📋 My key skill-set knowledge and certifications.",
       "experience-point-3": "🔍 Technical details, insights and expertise of my professional career.",
-      "footer-text": "© 2025 Santa Debnath | 🔒 All Rights Reserved | 👋 Welcome to My World 🌟",
+      "footer-text": "2025 Santa Debnath | 🔒 All Rights Reserved | 👋 Welcome to My World 🌟",
       "theme-light": "☀️ Light (Default)",
       "theme-dark": "🌙 Dark Mode",
       "theme-forest": "🌿 Forest Vibes",
@@ -783,7 +793,7 @@ body.solarized .theme-selector {
       "experience-point-1": "🛠️ अब तक के मेरे करियर का संक्षिप्त विवरण।",
       "experience-point-2": "📋 मेरी मुख्य स्किल्स और सर्टिफिकेशन।",
       "experience-point-3": "🔍 तकनीकी जानकारी, अनुभव और विशेषज्ञता।",
-      "footer-text": "© 2025 संता देबनाथ | 🔒 सर्वाधिकार सुरक्षित | 👋 मेरी दुनिया में आपका स्वागत है 🌟",
+      "footer-text": "2025 संता देबनाथ | 🔒 सर्वाधिकार सुरक्षित | 👋 मेरी दुनिया में आपका स्वागत है 🌟",
       "theme-light": "☀️ लाइट (डिफ़ॉल्ट)",
       "theme-dark": "🌙 डार्क मोड",
       "theme-forest": "🌿 फॉरेस्ट वाइब्स",
@@ -830,7 +840,7 @@ body.solarized .theme-selector {
       "experience-point-1": "🛠️ আমি কীভাবে এই পর্যায়ে পৌঁছালাম তার সংক্ষিপ্ত বিবরণ।",
       "experience-point-2": "📋 আমার মূল দক্ষতা ও সার্টিফিকেশন।",
       "experience-point-3": "🔍 প্রযুক্তিগত বিশদ, অন্তর্দৃষ্টি এবং বিশেষজ্ঞতা।",
-      "footer-text": "© 2025 সান্তা দেবনাথ | 🔒 সমস্ত অধিকার সংরক্ষিত | 👋 আমার জগতে স্বাগতম 🌟",
+      "footer-text": "2025 সান্তা দেবনাথ | 🔒 সমস্ত অধিকার সংরক্ষিত | 👋 আমার জগতে স্বাগতম 🌟",
       "theme-light": "☀️ লাইট (ডিফল্ট)",
       "theme-dark": "🌙 ডার্ক মোড",
       "theme-forest": "🌿 ফরেস্ট ভাইবস",
