--- a/index.html
+++ b/index.html
@@ -275,7 +275,8 @@ body.nebula {
       color: #00f0ff;
       text-shadow: 0 0 5px #00f0ff, 0 0 10px #00f0ff, 0 0 20px #00e0ff;
       margin-right: 6px;
-      vertical-align: middle;
+      position: relative;
+      top: -2px; /* Move it slightly up */
     }
 
     @media (max-width: 768px) {
@@ -688,7 +689,7 @@ body.solarized .theme-selector {
 
   <footer>
     <p><span class="glow">&copy;</span><span data-i18n="footer-text"></span></p>
-    <p data-i18n="footer-text"> 2025 Santa Debnath | 🔒 All Rights Reserved | 👋 Welcome to My World 🌟</p>
+    <!--<p data-i18n="footer-text">&copy; 2025 Santa Debnath | 🔒 All Rights Reserved | 👋 Welcome to My World 🌟</p>-->
   </footer>
 
   <script>
