--- a/index.html
+++ b/index.html
@@ -275,8 +275,7 @@ body.nebula {
       color: #00f0ff;
       text-shadow: 0 0 5px #00f0ff, 0 0 10px #00f0ff, 0 0 20px #00e0ff;
       margin-right: 6px;
-      position: relative;
-      top: -1px; /* Move it slightly up */
+      vertical-align: -0.1em;
     }
 
     @media (max-width: 768px) {
