--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@ body.nebula {
       background: var(--header-bg);
       color: var(--header-text);
       text-align: center;
-      padding: 1rem;
-      margin-top: 3rem;
+      padding: 0.5rem 1rem;
+      margin-top: 1.5rem;
     }
 
     footer p {
